# VayyarCareRV1106

./: README.md  env_setup.sh
component/authorization/: Makefile  cmake_install.cmake
component/restful/: Makefile  cmake_install.cmake
prebuilt/etc/: ca-certificates.crt  mosquitto  mosquitto.conf
prebuilt/include/openssl/: configuration.h
prebuilt/lib/: libcrypto.so.3  libcurl.so.4.8.0  libjsoncpp.so.1.9.6  libmosquitto.so.1  libmosquitto.so.2.0.22  libmosquittopp.so.1  libmosquittopp.so.2.0.22  libpaho-mqtt3cs.so.1.3.13  libssl.so.3
src/: CMakeLists.txt  src_common.cmake
src/app/mqttadapter/: CMakeLists.txt
src/app/mqttadapter/source/: main.cpp  test-publisher.cpp  test-subscriber.cpp
src/app/registery/: CMakeLists.txt
src/app/registery/include/: Device.h  RestfulConnector.h
src/app/registery/source/: Device.cpp  RestfulConnector.cpp  main.cpp
src/component/authorization/: CMakeLists.txt
src/component/authorization/include/: Auth.h
src/component/authorization/source/: Auth.cpp
src/component/log/log_client/: CMakeLists.txt
src/component/log/log_client/include/: log_client.h
src/component/log/log_client/source/: log_client.c
src/component/log/log_server/: CMakeLists.txt  Log.json
src/component/log/log_server/.ipynb_checkpoints/: Log-checkpoint.json  Makefile-checkpoint  log_server-checkpoint.cpp  output_2025_11_13_14_40_05-checkpoint.logZone.Identifier
src/component/log/log_server/source/: log_server.cpp
src/component/log/log_test/: CMakeLists.txt
src/component/log/log_test/.ipynb_checkpoints/: Json_write-checkpoint.cpp  Makefile-checkpoint  test-checkpoint.c
src/component/log/log_test/include/: log_client.h
src/component/log/log_test/source/: Json_write.cpp  Test_pub.c  Test_sub.c  log_test.c  readme.txt
src/component/log/test/: CMakeLists.txt
src/component/messagebus/: CMakeLists.txt
src/component/messagebus/include/: mb.h  mb_client.h  mb_context.h  mb_global.h  mb_optlock.h  mb_publisher.h  mb_puller.h  mb_pusher.h  mb_subscriber.h  mb_util.h
src/component/messagebus/source/: mb.cpp  mb_context.cpp  mb_global.cpp  mb_publisher.cpp  mb_puller.cpp  mb_pusher.cpp  mb_subscriber.cpp  mb_util.cpp
src/component/messagebusmosq/: CMakeLists.txt
src/component/messagebusmosq/include/: messagebus.h
src/component/messagebusmosq/source/: messagebus.cpp
src/component/mqttclient/: CMakeLists.txt
src/component/mqttclient/include/: MqttClient.h  MqttClientManager.h
src/component/mqttclient/source/: MqttClient.cpp  MqttClientManager.cpp
src/component/restful/: CMakeLists.txt
src/component/restful/include/: Parameter.h  Response.h  Session.h  Util.h
src/component/restful/source/: Parameter.cpp  Session.cpp  Util.cpp
toolchain/: env_setup.sh
